--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "@types/react": "^18.2.45",
     "@types/react-dom": "^18.2.18",
     "@vitejs/plugin-react": "^4.2.1",
-    "vite": "^5.0.10"
+    "vite": "^5.0.10",
+    "postcss": "^8.4.32",
+    "autoprefixer": "^10.4.16"
   }
 }
