--- a/package.json
+++ b/package.json
@@ -11,8 +11,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "framer-motion": "^11.0.0",
-    "lucide-react": "^0.300.0",
-    "tailwindcss": "^3.0.0"
+    "lucide-react": "^0.300.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.45",
@@ -20,6 +19,7 @@
     "@vitejs/plugin-react": "^4.2.1",
     "vite": "^5.0.10",
     "postcss": "^8.4.32",
-    "autoprefixer": "^10.4.16"
+    "autoprefixer": "^10.4.16",
+    "tailwindcss": "^3.0.0" 
   }
 }
