--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "framer-motion": "^11.0.24",
     "lucide-react": "^0.368.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "gsap": "^3.x.x"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
