--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "flash-impianti-react",
+  "name": "flash-impianti-website",
   "private": true,
-  "version": "0.0.0",
+  "version": "1.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -11,10 +11,11 @@
   },
   "dependencies": {
     "framer-motion": "^11.0.24",
+    "gsap": "^3.12.5",
     "lucide-react": "^0.368.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "gsap": "^3.x.x"
+    "three": "^0.163.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
