--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "flash-impianti-website",
+  "name": "flash-impianti",
   "private": true,
   "version": "1.0.0",
   "type": "module",
@@ -10,24 +10,23 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "framer-motion": "^11.0.24",
-    "gsap": "^3.12.5",
-    "lucide-react": "^0.368.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "three": "^0.163.0"
+    "gsap": "^3.12.5",
+    "framer-motion": "^11.0.25",
+    "lucide-react": "^0.368.0",
+    "tailwindcss": "^3.4.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
     "@vitejs/plugin-react": "^4.2.1",
-    "autoprefixer": "^10.4.19",
     "eslint": "^8.57.0",
     "eslint-plugin-react": "^7.34.1",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.6",
+    "autoprefixer": "^10.4.19",
     "postcss": "^8.4.38",
-    "tailwindcss": "^3.4.3",
     "vite": "^5.2.0"
   }
 }
